migrate from alpine based openjdk 13 to slim openjdk 14 - associated maven changes